🔀 change: swaggoのドキュメントに共通のErrorResponseを利用 #6
