# internal/presentation/user/response.go
@@ -22,7 +22,3 @@ type PolicyModel struct {
 	ID   string `json:"id"`
 	Name string `json:"name"`
 }
-
-type ErrorResponse struct {
-	Error string `json:"message"`
-}
